--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ flake8==7.1.0
 Flask==3.0.3
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.7
 Flask-WTF==1.2.1
 greenlet==3.0.3
 idna==3.7
